docs: update documentation URL to package.roninslab.com

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   ],
   "author": "yldrmahmet",
   "license": "MIT",
-  "homepage": "https://ronins-react.roninslab.com",
+  "homepage": "https://package.roninslab.com",
   "repository": {
     "type": "git",
     "url": "https://github.com/yldrmahmet/create-ronins-react"
