--- a/.npmignore
+++ b/.npmignore
@@ -1,27 +1,40 @@
 # Dependencies
 node_modules/
-template/node_modules/
 **/node_modules/
+
+# Build outputs & cache
+**/dist/
 **/.vite/
 
-# Build outputs
-template/dist
-
-# Lockfiles
+# Lockfiles (users will generate their own)
+**/*.lock
+**/*.lockb
+**/*-lock.yaml
+**/*-lock.json
+bun.lock
 template/bun.lock
-template/package-lock.json
-template/yarn.lock
-template/pnpm-lock.yaml
 
 # Docs (not needed in npm package)
-docs
+docs/
 
-# IDE
-.idea
-.vscode
+# IDE & Editor
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # OS
 .DS_Store
+Thumbs.db
 
 # Git
-.git
+.git/
+.gitignore
+
+# Test & Coverage
+coverage/
+*.log
+
+# Temp files
+.temp/
+.tmp/
